--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,12 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.jsoniter</groupId>
+            <artifactId>jsoniter</artifactId>
+            <version>0.9.18</version>
+        </dependency>
+
     </dependencies>
 </project>
