--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,10 @@
             <version>0.9.18</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.javagl</groupId>
+            <artifactId>obj</artifactId>
+            <version>0.2.1</version>
+        </dependency>
     </dependencies>
 </project>
